# alt.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile
examples/: Makefile
include/: dag.h  fixed.h  lehmer.h  log.h  logger.h  matrix.h  precision.h  vector.h
notes/: precision.md
scripts/: build.sh  setup.sh  update.sh
source/: alt.cpp  lehmer.c  linear.cpp  logger.c  main.c  main.cpp  matrix.c  plot.cpp  precision.c  vector.c  vulkan.cpp  xor.c
tests/: test_log.c  test_logger.c  test_openblas.c  test_precision.c  test_pthread.c  test_vector.c  test_vulkan.cpp
